fix alignment of levels in recent progress

--- a/site-root/sass/student-dashboard.scss
+++ b/site-root/sass/student-dashboard.scss
@@ -219,7 +219,7 @@ $level-12-color-dark;
     }
 
     .level-col {
-        text-align: right;
+        text-align: center;
 
         > div {
             border-radius: 3px;
